about page skills aligned corrected

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -4,13 +4,6 @@
   font-family: "Times New Roman", Times, serif;
 }
 
-.page-content {
-  width: 80vw; /* Default width for larger devices */
-  display: flex;
-  justify-content: space-between;
-  margin: 0 auto; /* Center the content horizontally */
-}
-
 .about-desc,
 .about-skills {
   width: 40vw; /* Default width for each section on larger devices */
@@ -40,6 +33,9 @@
 .about-skills p {
   margin-bottom: 1rem; /* Space between paragraphs */
 }
+.about-skills-heading {
+  font-size: 1.5rem;
+}
 
 .skills-container {
   display: flex;
@@ -48,18 +44,23 @@
 }
 
 .skill {
-  flex-basis: 23%; /* Each skill takes up 23% of the row */
-  margin: 10px;
+  flex: 1 1 23%; 
+  margin: 5px; 
   text-align: center;
-  padding: 5px 10px;
-  border: 1px solid #333;
-  border-radius: 3px;
-  cursor: pointer;
+  padding: 5px;
+  border: 1px solid #c4aa8973;
+  border-radius: 4px;
 }
 
 @media (max-width: 992px) {
   .skill {
-    flex-basis: 45%; /* For medium devices, display 2 skills per row */
+    flex: 1 1 45%;
+  }
+}
+
+@media (max-width: 576px) {
+  .skill {
+    flex: 1 1 45%;
   }
 }
 
