--- a/src/index.css
+++ b/src/index.css
@@ -44,3 +44,16 @@ html,
 .page-heading h1 {
   margin-bottom: 0;
 }
+
+.page-content {
+  width: 80vw;
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+}
+
+@media (max-width: 768px) {
+  .page-content {
+    width: 100vw;
+  }
+}
